dev-previews/rightsizing-mcp/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mco-rightsizing-mcp
  namespace: mco-rightsizing-mcp-demo
  labels:
    app.kubernetes.io/name: mco-rightsizing-mcp-demo
spec:
  to:
    kind: Service
    name: mco-rightsizing-mcp
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
